# sctl

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  rundev.sh
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/sctl-comms-protocol/: Cargo.toml
crates/sctl-comms-protocol/src/: lib.rs
docs/: design-streaming-jobs.md  guide.md
drivers/: README.md
drivers/sctl-comms-quectel/: Cargo.toml
drivers/sctl-comms-quectel/src/: main.rs
mcp/: Cargo.toml  Makefile  README.md  devices.example.json
mcp/src/: client.rs  config.rs  devices.rs  main.rs  mcp.rs  playbook_registry.rs  playbooks.rs  supervisor.rs  tools.rs  websocket.rs
playbooks/linux/: diagnostics.md  health-check.md  security-hardening.md
playbooks/openwrt/: diagnostics.md  health-check.md  network-mode.md  network-setup.md  security-hardening.md  speedtest-multi-eth.md
scripts/: pre-commit-secret-scan.sh
server/: CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  relay.toml.example  sctl.toml.example
server/.cargo/: config.toml
server/docs/: FUTURE-TERMINAL-UI.md  REVIEW.md
server/files/: sctl-relay.service  sctl.init  sctl.service  sctlin.service
server/src/: activity.rs  auth.rs  comms.rs  config.rs  error.rs  gps.rs  lib.rs  lte.rs  lte_watchdog.rs  main.rs  modem.rs  sctlin_proxy.rs  state.rs  supervisor.rs  util.rs
server/src/gawdxfer/: hasher.rs  manager.rs  mod.rs  types.rs
server/src/infra/: checks.rs  discovery.rs  mod.rs  monitor.rs  routes.rs
server/src/platform/: mod.rs  openwrt.rs
server/src/routes/: activity.rs  diagnostics.rs  events.rs  exec.rs  files.rs  gps.rs  health.rs  info.rs  lte.rs  mod.rs  playbooks.rs  safe_mode.rs  sessions.rs  shells.rs  stp.rs
server/src/sessions/: buffer.rs  journal.rs  mod.rs  session.rs
server/src/shell/: mod.rs  process.rs  pty.rs
server/src/tunnel/: client.rs  mod.rs  relay.rs
server/src/ws/: messages.rs  mod.rs
web/: CLAUDE.md  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
web/src/: app.css  hooks.server.ts
web/src/lib/: index.ts
web/src/lib/components/: ActivityFeed.svelte  CommandPalette.svelte  ControlBar.svelte  DeviceInfoPanel.svelte  ExecViewer.svelte  FileBrowser.svelte  FileContextMenu.svelte  FileEditor.svelte  FileToolbar.svelte  FileTree.svelte  HistoryViewer.svelte  KeyboardShortcuts.svelte  PlaybookExecutor.svelte  PlaybookList.svelte  PlaybookPanel.svelte  PlaybookViewer.svelte  QuickExecBar.svelte  SearchBar.svelte  ServerDashboard.svelte  ServerPanel.svelte  SidePanel.svelte  SplitPane.svelte  Terminal.svelte  TerminalContainer.svelte  TerminalTabs.svelte  ToastContainer.svelte  TransferIndicator.svelte  TransferProgress.svelte  index.ts
web/src/lib/server/: auth.ts
web/src/lib/styles/: theme.css
web/src/lib/types/: index.ts  terminal.types.ts  widget.types.ts
web/src/lib/utils/: connection-manager.test.ts  connection-manager.ts  errors.test.ts  errors.ts  index.ts  keyboard.ts  lte.ts  playbook-parser.test.ts  playbook-parser.ts  relay.ts  rest-client.test.ts  rest-client.ts  transfer.ts  ws-client.ts  xterm.ts
web/src/lib/widgets/: ActivityWidget.svelte  DeviceStatusWidget.svelte  PlaybookWidget.svelte  TerminalWidget.svelte  index.ts
web/src/routes/: +page.svelte
web/src/routes/login/: +page.server.ts  +page.svelte
